--- a/functions/github_functions.ipynb
+++ b/functions/github_functions.ipynb
@@ -19,18 +19,18 @@
       "metadata": {
         "id": "6gHtauxrTwNz"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "36048d08-3ff1-459c-af5f-c9d606c716b5"
+        "outputId": "3a2b9e8c-6239-4b81-87ff-d6379fcce8f6"
       },
       "outputs": [
         {
@@ -67,12 +67,15 @@
         "\n",
         "import os\n",
         "from github import Github\n",
-        "from io import StringIO\n"
+        "from io import StringIO\n",
+        "\n",
+        "import json\n",
+        "\n"
       ],
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -102,7 +105,6 @@
         "      sha = file.sha\n",
         "  except Exception as e:\n",
         "      sha = None\n",
-        "\n",
         "  if sha:\n",
         "      repo.update_file(file_name, \"Update file\", file_content, sha, branch_name)\n",
         "      # print(f\"Updated {file_name} in {repository_name}\")\n",
@@ -117,17 +119,26 @@
         "\n",
         "def get_file_content(file_name):\n",
         "  file_content=download_file_from_github(\"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/\"+file_name)\n",
-        "  if file_name.split('.')[1]=='txt':\n",
-        "    file_content=eval(file_content)\n",
+        "  print(file_content)\n",
+        "  if file_name.split('.')[1]=='txt'  :\n",
+        "    file_content=str(file_content).strip()\n",
         "    return(file_content)\n",
         "  if file_name.split('.')[1]=='csv':\n",
         "    file_content=pd.read_csv(io.BytesIO(file_content))\n",
-        "    return(file_content)\n"
+        "    return(file_content)\n",
+        "  if file_name.endswith('.json'):\n",
+        "        # If the file is a JSON file, parse its content and return a list\n",
+        "    try:\n",
+        "        file_content_list = json.loads(file_content)\n",
+        "        return file_content_list\n",
+        "    except json.JSONDecodeError as e:\n",
+        "        print(f\"Error parsing JSON file {file_name}: {e}\")\n",
+        "        return None\n"
       ],
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     }
   ],
@@ -135,7 +146,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyP//Ckq5vrLiZu/HWPYndCM",
+      "authorship_tag": "ABX9TyMjn9ce9D+8BKiRoYrWMuCa",
       "include_colab_link": true
     },
     "kernelspec": {
