--- a/functions/github_functions.ipynb
+++ b/functions/github_functions.ipynb
@@ -119,7 +119,6 @@
         "\n",
         "def get_file_content(file_name):\n",
         "  file_content=download_file_from_github(\"https://raw.githubusercontent.com/jeanbouteiller-ds/tennis_prediction/main/\"+file_name)\n",
-        "  print(file_content)\n",
         "  if file_name.split('.')[1]=='txt'  :\n",
         "    file_content=str(file_content).strip()\n",
         "    return(file_content)\n",
@@ -138,15 +137,41 @@
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_file_content(\"update_all_matchs_report.json\")"
+      ],
+      "metadata": {
+        "id": "neuWhhjkuiIg",
+        "outputId": "427382b5-b954-4e75-951f-13835fa4548d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMjn9ce9D+8BKiRoYrWMuCa",
+      "authorship_tag": "ABX9TyOBoq4BveEwsdqzUKjBig6Y",
       "include_colab_link": true
     },
     "kernelspec": {
