--- a/functions/github_functions.ipynb
+++ b/functions/github_functions.ipynb
@@ -19,12 +19,12 @@
       "metadata": {
         "id": "6gHtauxrTwNz"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,6 +100,10 @@
         "\n",
         "\n",
         "def add_file_github(file_name,file_content):\n",
+        "  # Convert the list to a JSON string if it's a list\n",
+        "  if isinstance(file_content, list):\n",
+        "      file_content = json.dumps(file_content)\n",
+        "\n",
         "  try:\n",
         "      file = repo.get_contents(file_name, ref=branch_name)\n",
         "      sha = file.sha\n",
@@ -137,41 +141,15 @@
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "get_file_content(\"update_all_matchs_report.json\")"
-      ],
-      "metadata": {
-        "id": "neuWhhjkuiIg",
-        "outputId": "427382b5-b954-4e75-951f-13835fa4548d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
-        }
-      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOBoq4BveEwsdqzUKjBig6Y",
+      "authorship_tag": "ABX9TyMSVfmazMf/QT1GvYERc0X5",
       "include_colab_link": true
     },
     "kernelspec": {
