--- a/functions/github_functions.ipynb
+++ b/functions/github_functions.ipynb
@@ -19,18 +19,18 @@
       "metadata": {
         "id": "6gHtauxrTwNz"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "3a2b9e8c-6239-4b81-87ff-d6379fcce8f6"
+        "outputId": "dfe2912d-8db1-4ad6-f975-8faa3816c49e"
       },
       "outputs": [
         {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -102,7 +102,8 @@
         "def add_file_github(file_name,file_content):\n",
         "  # Convert the list to a JSON string if it's a list\n",
         "  if isinstance(file_content, list):\n",
-        "      file_content = json.dumps(file_content)\n",
+        "      # file_content = json.dumps(file_content)\n",
+        "      file_content = \"\\n\".join(json.dumps(item) for item in file_content)\n",
         "\n",
         "  try:\n",
         "      file = repo.get_contents(file_name, ref=branch_name)\n",
@@ -132,24 +133,57 @@
         "  if file_name.endswith('.json'):\n",
         "        # If the file is a JSON file, parse its content and return a list\n",
         "    try:\n",
-        "        file_content_list = json.loads(file_content)\n",
-        "        return file_content_list\n",
+        "      file_content_lines = file_content.decode('utf-8').splitlines()  # Split lines\n",
+        "      file_content_list = [json.loads(line) for line in file_content_lines]\n",
+        "      return file_content_list\n",
         "    except json.JSONDecodeError as e:\n",
-        "        print(f\"Error parsing JSON file {file_name}: {e}\")\n",
-        "        return None\n"
+        "      print(f\"Error parsing JSON file {file_name}: {e}\")\n",
+        "      return None\n"
       ],
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_file_content(\"update_all_matchs_report.json\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L6jumpRSxkmR",
+        "outputId": "45724fd5-ea16-4cf3-8ecb-c4f9c2f979a3"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'te': 3},\n",
+              " {'date': '2023-10-25 21:42',\n",
+              "  'Nb Duplicates': 9,\n",
+              "  'Nb New lines': 0,\n",
+              "  'Nb Total lines': 133417,\n",
+              "  'Nb New tournament_name': 0,\n",
+              "  'Nb Total tournament_name': 268}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyMSVfmazMf/QT1GvYERc0X5",
+      "authorship_tag": "ABX9TyNlCiZuB8XTtGgZSbXm15lu",
       "include_colab_link": true
     },
     "kernelspec": {
