--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -444,13 +444,45 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Report Generation"
+      ],
+      "metadata": {
+        "id": "clEmlgpW2R6e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_report_worfflow(original_dataset_name,new_dataset_name,report_name,columns_to_consider):\n",
+        "  #When running a workflow, we want to create a report of the action\n",
+        "  report=get_file_content(report_name)\n",
+        "  dict_iteration={}\n",
+        "  dict_iteration['date']=datetime.now().strftime(\"%Y-%m-%d %H:%M\")\n",
+        "  dict_iteration['Nb Duplicates']=len(new_dataset_name)-len(new_dataset_name.drop_duplicates())\n",
+        "  dict_iteration['Nb Total lines']=len(new_dataset_name)\n",
+        "  dict_iteration['Nb New lines']=len(new_dataset_name)-len(original_dataset_name)\n",
+        "  for col in columns_to_consider:\n",
+        "    dict_iteration['Nb New '+col]=len(new_dataset_name[col].unique())-len(original_dataset_name[col].unique())\n",
+        "    dict_iteration['Nb Total '+col]=len(new_dataset_name[col].unique())\n",
+        "  report.append(dict_iteration)\n",
+        "  add_file_github(report_name,report)"
+      ],
+      "metadata": {
+        "id": "X86mr0Bd2U5P"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyPslKc0D51EFvvZq4ZTxR1t",
+      "authorship_tag": "ABX9TyOlOTQjbcpMFe25zzeXWoq7",
       "include_colab_link": true
     },
     "kernelspec": {
