--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -457,7 +457,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def create_report_worfflow(original_dataset_name,new_dataset_name,report_name,columns_to_consider):\n",
+        "def create_report_workflow(original_dataset_name,new_dataset_name,report_name,columns_to_consider):\n",
         "  #When running a workflow, we want to create a report of the action\n",
         "  report=get_file_content(report_name)\n",
         "  dict_iteration={}\n",
@@ -482,7 +482,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyOlOTQjbcpMFe25zzeXWoq7",
+      "authorship_tag": "ABX9TyMUVvuPDXzpmdBMiiGuBRmT",
       "include_colab_link": true
     },
     "kernelspec": {
