--- a/functions/github_functions.ipynb
+++ b/functions/github_functions.ipynb
@@ -19,18 +19,18 @@
       "metadata": {
         "id": "6gHtauxrTwNz"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gorg-TjzXeal",
-        "outputId": "dfe2912d-8db1-4ad6-f975-8faa3816c49e"
+        "outputId": "854077d8-8775-49fd-f48f-ab047f318b47"
       },
       "outputs": [
         {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "4uiY8VTA6kN2"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -127,63 +127,41 @@
         "  if file_name.split('.')[1]=='txt'  :\n",
         "    file_content=str(file_content).strip()\n",
         "    return(file_content)\n",
+        "\n",
         "  if file_name.split('.')[1]=='csv':\n",
         "    file_content=pd.read_csv(io.BytesIO(file_content))\n",
         "    return(file_content)\n",
+        "\n",
         "  if file_name.endswith('.json'):\n",
-        "        # If the file is a JSON file, parse its content and return a list\n",
         "    try:\n",
-        "      file_content_lines = file_content.decode('utf-8').splitlines()  # Split lines\n",
+        "      file_content_lines = file_content.decode().splitlines()  # Split lines\n",
         "      file_content_list = [json.loads(line) for line in file_content_lines]\n",
         "      return file_content_list\n",
+        "\n",
+        "    except json.JSONDecodeError as e:\n",
+        "      a=1 #want to handle the error and don't do anything\n",
+        "\n",
+        "    try:\n",
+        "      file_content_list = eval(file_content.decode())  # Split lines\n",
+        "      # file_content_list = [json.loads(line) for line in file_content_lines]\n",
+        "      return file_content_list\n",
+        "\n",
         "    except json.JSONDecodeError as e:\n",
         "      print(f\"Error parsing JSON file {file_name}: {e}\")\n",
-        "      return None\n"
+        "      # return None\n"
       ],
       "metadata": {
         "id": "KnltnHuj_0Fy"
       },
-      "execution_count": 28,
+      "execution_count": 34,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "get_file_content(\"update_all_matchs_report.json\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "L6jumpRSxkmR",
-        "outputId": "45724fd5-ea16-4cf3-8ecb-c4f9c2f979a3"
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[{'te': 3},\n",
-              " {'date': '2023-10-25 21:42',\n",
-              "  'Nb Duplicates': 9,\n",
-              "  'Nb New lines': 0,\n",
-              "  'Nb Total lines': 133417,\n",
-              "  'Nb New tournament_name': 0,\n",
-              "  'Nb Total tournament_name': 268}]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNlCiZuB8XTtGgZSbXm15lu",
+      "authorship_tag": "ABX9TyNRfT0vczO7XsBX4IkUvrmC",
       "include_colab_link": true
     },
     "kernelspec": {
