--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -319,7 +319,8 @@
         "        return (player_name, None)\n",
         "\n",
         "#the below function has been created by the chatgpt optimizer\n",
-        "def create_new_fixed_table(file_name, list_player_names, list_urls,write_csv=False):\n",
+        "def create_new_fixed_table(list_player_names, list_urls,write_csv=False):\n",
+        "\n",
         "    player_data = []\n",
         "\n",
         "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
@@ -482,7 +483,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyNZw4o2WUIdFMi4KSFkno1b",
+      "authorship_tag": "ABX9TyM+4UwrpnQgKZ+HIicMjHkX",
       "include_colab_link": true
     },
     "kernelspec": {
