--- a/update_all_matchs.ipynb
+++ b/update_all_matchs.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlJRbVpLTsxk8WyciPzBFV",
+      "authorship_tag": "ABX9TyMZiSW9xOtncnuONxob8TSA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,16 +169,18 @@
     {
       "cell_type": "code",
       "source": [
-        "matchs_report=get_file_content(\"update_all_matchs_report.txt\")\n",
+        "# matchs_report=get_file_content(\"update_all_matchs_report.txt\")\n",
         "\n",
-        "number_new_tournaments=len(final_df['tournament_name'].unique())-len(df_all_matchs['tournament_name'].unique())\n",
-        "number_new_games=len(final_df)-len(df_all_matchs)\n",
-        "time_run=datetime.now()\n",
+        "# number_new_tournaments=len(final_df['tournament_name'].unique())-len(df_all_matchs['tournament_name'].unique())\n",
+        "# number_new_games=len(final_df)-len(df_all_matchs)\n",
+        "# time_run=datetime.now()\n",
         "\n",
-        "string_return=str(time_run)+': '+str(number_new_tournaments)+' new tournaments and '+str(number_new_games)+' new games. Total Number of games: '+str(len(final_df))+' - Total number of players: '+str(len(final_df['loser_name'].unique()))\n",
-        "matchs_report.append(string_return)\n",
+        "# string_return=str(time_run)+': '+str(number_new_tournaments)+' new tournaments and '+str(number_new_games)+' new games. Total Number of games: '+str(len(final_df))+' - Total number of players: '+str(len(final_df['loser_name'].unique()))\n",
+        "# matchs_report.append(string_return)\n",
         "\n",
-        "add_file_github('update_all_matchs_report.txt',str(matchs_report).replace(',',',\\n'))"
+        "# add_file_github('update_all_matchs_report.txt',str(matchs_report).replace(',',',\\n'))\n",
+        "\n",
+        "create_report_workflow(df_all_matchs,final_df,'reports/update_df_betting.json',['loser_name'])\n"
       ],
       "metadata": {
         "id": "WIvWUHLyPGTu"
