--- a/clean_table.ipynb
+++ b/clean_table.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOS4SEMW6lqoIBmVQrQ9MMJ",
+      "authorship_tag": "ABX9TyNWLYz8OE0nh8PWM+SKQaLt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,30 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/jeanbouteiller-ds/tennis_prediction/blob/main/clean_table.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import subprocess\n",
+        "import sys\n",
+        "\n",
+        "def install_package(package_name):\n",
+        "    try:\n",
+        "        subprocess.check_call([sys.executable, '-m', 'pip', 'install', package_name])\n",
+        "        print(f\"Successfully installed {package_name}\")\n",
+        "    except subprocess.CalledProcessError:\n",
+        "        print(f\"Failed to install {package_name}\") # Install the PyGitHub library\n",
+        "\n",
+        "install_package(\"requests\")\n",
+        "install_package(\"PyGitHub\")\n",
+        "install_package(\"pandas\")\n",
+        "install_package(\"tqdm\")"
+      ],
+      "metadata": {
+        "id": "zBnT4oD2GAI7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
