--- a/clean_table.ipynb
+++ b/clean_table.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNWLYz8OE0nh8PWM+SKQaLt",
+      "authorship_tag": "ABX9TyNPWqMdt9iZJJwjfuxB6E8P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,18 +46,49 @@
         "install_package(\"tqdm\")"
       ],
       "metadata": {
-        "id": "zBnT4oD2GAI7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zBnT4oD2GAI7",
+        "outputId": "cafebc33-9ac2-4091-c291-8d8033058aa6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n",
+            "Successfully installed tqdm\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 271,
+      "execution_count": 2,
       "metadata": {
-        "id": "k7w9-KyhTAtX"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k7w9-KyhTAtX",
+        "outputId": "d0f707a9-5c7f-443d-a3ed-2b346520de71"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed requests\n",
+            "Successfully installed requests\n",
+            "Successfully installed PyGitHub\n",
+            "Successfully installed pandas\n",
+            "Successfully installed requests\n"
+          ]
+        }
+      ],
       "source": [
         "import requests\n",
         "import io\n",
@@ -99,9 +130,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "31cb90ca-0bc6-47f5-b197-2b5ecc432a66"
+        "outputId": "56b90c67-0e55-43a7-e93c-332769b82b48"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +184,7 @@
       "metadata": {
         "id": "Vi6NLH51iYFn"
       },
-      "execution_count": 265,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -174,7 +205,7 @@
       "metadata": {
         "id": "XqjPCQDN9lMF"
       },
-      "execution_count": 264,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -282,44 +313,10 @@
         "df_matchs_clean=df_matchs_clean.drop_duplicates()\n"
       ],
       "metadata": {
-        "id": "zOhQUpqJTG1E",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4efee107-4237-46c2-e110-fcd4a7a0b763"
+        "id": "zOhQUpqJTG1E"
       },
-      "execution_count": 266,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-266-7465f4d525a1>:58: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_matchs_clean['round']=df_matchs_clean['round'].replace({'Finals':'Final','Quarterfinals':'Quarter-Finals','Semifinals':'Semi-Finals'})\n",
-            "<ipython-input-266-7465f4d525a1>:61: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_matchs_clean['winner_name']=df_matchs_clean['winner_name'].str.lower()\n",
-            "<ipython-input-266-7465f4d525a1>:62: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-            "Try using .loc[row_indexer,col_indexer] = value instead\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_matchs_clean['loser_name']=df_matchs_clean['loser_name'].str.lower()\n",
-            "<ipython-input-266-7465f4d525a1>:68: SettingWithCopyWarning: \n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  df_matchs_clean.loc[df_matchs_clean['tournament_name'].isna(),'tournament_name']=df_matchs_clean[df_matchs_clean['tournament_name'].isna()].merge(df_tournaments_nan,on=['tournament_date'])['tournament_name_y'].values\n"
-          ]
-        }
-      ]
+      "execution_count": 8,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -350,7 +347,7 @@
       "metadata": {
         "id": "tTQcr31pWbEi"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -389,7 +386,7 @@
         "    row_year_before=df_tournaments_clean[(df_tournaments_clean['tournament_name']==tournament_name)&\n",
         "                                      (df_tournaments_clean['tournament_date']==date_str)]\n",
         "    row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-        "    df_tournaments_clean=df_tournaments_clean.append(row_year_before)\n",
+        "    df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n",
         "\n",
         "#create a tournament_unique_id\n",
         "df_tournaments_clean=create_tournament_unique_id(df_tournaments_clean,'tournament_name','tournament_date')\n",
@@ -401,38 +398,38 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2a1ade66-0716-4a3b-aa25-4eb7a9ced883"
+        "outputId": "fcc1ce4a-e276-4241-aafe-381b046a6368"
       },
-      "execution_count": 272,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-272-093a8345ba3d>:24: SettingWithCopyWarning: \n",
+            "<ipython-input-11-dbedd7c7baa8>:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-            "<ipython-input-272-093a8345ba3d>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  df_tournaments_clean=df_tournaments_clean.append(row_year_before)\n",
-            "<ipython-input-272-093a8345ba3d>:24: SettingWithCopyWarning: \n",
+            "<ipython-input-11-dbedd7c7baa8>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+            "  df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n",
+            "<ipython-input-11-dbedd7c7baa8>:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-            "<ipython-input-272-093a8345ba3d>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  df_tournaments_clean=df_tournaments_clean.append(row_year_before)\n",
-            "<ipython-input-272-093a8345ba3d>:24: SettingWithCopyWarning: \n",
+            "<ipython-input-11-dbedd7c7baa8>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+            "  df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n",
+            "<ipython-input-11-dbedd7c7baa8>:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-            "<ipython-input-272-093a8345ba3d>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  df_tournaments_clean=df_tournaments_clean.append(row_year_before)\n"
+            "<ipython-input-11-dbedd7c7baa8>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+            "  df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n"
           ]
         }
       ]
