--- a/clean_table.ipynb
+++ b/clean_table.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPWqMdt9iZJJwjfuxB6E8P",
+      "authorship_tag": "ABX9TyMsmW26qjz8vEfpaCJ8dL7E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -386,7 +386,7 @@
         "    row_year_before=df_tournaments_clean[(df_tournaments_clean['tournament_name']==tournament_name)&\n",
         "                                      (df_tournaments_clean['tournament_date']==date_str)]\n",
         "    row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-        "    df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n",
+        "    df_tournaments_clean=pd.concat([df_tournaments_clean,pd.DataFrame(row_year_before)])\n",
         "\n",
         "#create a tournament_unique_id\n",
         "df_tournaments_clean=create_tournament_unique_id(df_tournaments_clean,'tournament_name','tournament_date')\n",
@@ -398,38 +398,32 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fcc1ce4a-e276-4241-aafe-381b046a6368"
+        "outputId": "8eaff851-edc3-431b-9820-5638e2e4e4b1"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-11-dbedd7c7baa8>:24: SettingWithCopyWarning: \n",
+            "<ipython-input-14-9602beb6761c>:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-            "<ipython-input-11-dbedd7c7baa8>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n",
-            "<ipython-input-11-dbedd7c7baa8>:24: SettingWithCopyWarning: \n",
+            "<ipython-input-14-9602beb6761c>:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
             "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-            "<ipython-input-11-dbedd7c7baa8>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n",
-            "<ipython-input-11-dbedd7c7baa8>:24: SettingWithCopyWarning: \n",
+            "<ipython-input-14-9602beb6761c>:24: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
             "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n",
-            "<ipython-input-11-dbedd7c7baa8>:25: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-            "  df_tournaments_clean=df_tournaments_clean.append(pd.DataFrame(row_year_before))\n"
+            "  row_year_before['tournament_date']= add_one_year(row_year_before['tournament_date'].values[0])\n"
           ]
         }
       ]
