--- a/clean_table.ipynb
+++ b/clean_table.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMsmW26qjz8vEfpaCJ8dL7E",
+      "authorship_tag": "ABX9TyMyn3UxwzIZKfvY+JEhswVQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,9 +130,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "56b90c67-0e55-43a7-e93c-332769b82b48"
+        "outputId": "ff643931-9b07-46a8-f61a-1f2dad37cfa1"
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,6 +441,7 @@
       "cell_type": "code",
       "source": [
         "df_fixed_table_clean=df_fixed_table.copy()\n",
+        "df_fixed_table_clean=df_fixed_table_clean[df_fixed_table_clean['Plays']!='\\n']\n",
         "\n",
         "import re\n",
         "import math\n",
@@ -488,7 +489,7 @@
       "metadata": {
         "id": "jpnwPbS5Z4NB"
       },
-      "execution_count": 7,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -541,7 +542,7 @@
       "metadata": {
         "id": "W-8ELzOkS4jh"
       },
-      "execution_count": 67,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -601,7 +602,7 @@
       "metadata": {
         "id": "djQC9NgcLgQw"
       },
-      "execution_count": 273,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -649,14 +650,14 @@
         "df_matchs_clean['loser_name_clean_3first']=df_matchs_clean['loser_name'].apply(lambda x:clean_player_full_3first(x))\n",
         "df_ranking_clean['player_name_clean_3first']=df_ranking_clean['player_name'].apply(lambda x:clean_player_full_3first(x))\n",
         "\n",
-        "df_betting_clean['clean_player_only_name_full']=df_betting_clean['Winner'].apply(lambda x:clean_player_only_name_full(x))\n",
-        "df_betting_clean['clean_player_only_name_full']=df_betting_clean['Loser'].apply(lambda x:clean_player_only_name_full(x))\n",
+        "df_betting_clean['clean_winner_only_name_full']=df_betting_clean['Winner'].apply(lambda x:clean_player_only_name_full(x))\n",
+        "df_betting_clean['clean_loser_only_name_full']=df_betting_clean['Loser'].apply(lambda x:clean_player_only_name_full(x))\n",
         "\n"
       ],
       "metadata": {
         "id": "KPnNegclvQFi"
       },
-      "execution_count": 276,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -700,7 +701,7 @@
       "metadata": {
         "id": "0EULQZ9GEUfS"
       },
-      "execution_count": 289,
+      "execution_count": 22,
       "outputs": []
     }
   ]
