--- a/clean_table.ipynb
+++ b/clean_table.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMyn3UxwzIZKfvY+JEhswVQ",
+      "authorship_tag": "ABX9TyPDK8un4NLIR2XIDMtJfc6Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zBnT4oD2GAI7",
-        "outputId": "cafebc33-9ac2-4091-c291-8d8033058aa6"
+        "outputId": "84d5fbc5-31f2-4d81-a4c5-e235ab5b0ec6"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,13 +68,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k7w9-KyhTAtX",
-        "outputId": "d0f707a9-5c7f-443d-a3ed-2b346520de71"
+        "outputId": "5ea6b4ba-bc2f-42b1-b0a3-b472583c1ce6"
       },
       "outputs": [
         {
@@ -130,9 +130,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff643931-9b07-46a8-f61a-1f2dad37cfa1"
+        "outputId": "0779c287-b338-4d73-d4ee-b4d1e84ba5a4"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,6 +442,8 @@
       "source": [
         "df_fixed_table_clean=df_fixed_table.copy()\n",
         "df_fixed_table_clean=df_fixed_table_clean[df_fixed_table_clean['Plays']!='\\n']\n",
+        "df_fixed_table_clean=df_fixed_table_clean[df_fixed_table_clean['Plays']!='Ambidextrous,UnknownBackhand']\n",
+        "\n",
         "\n",
         "import re\n",
         "import math\n",
@@ -479,9 +481,9 @@
         "    # If none of the formats match, handle the error\n",
         "    return None  # or raise an exception if preferred\n",
         "\n",
-        "df_fixed_table_clean['Favorite_Hand']=df_fixed_table['Plays'].apply(lambda x:x.split('-Handed')[0])\n",
-        "df_fixed_table_clean['BackHand']=df_fixed_table['Plays'].apply(lambda x:x.split(',')[1].split('Backhand')[0])\n",
-        "df_fixed_table_clean['Height (CM)']=df_fixed_table['height'].apply(lambda x:extract_height(x))\n",
+        "df_fixed_table_clean['Favorite_Hand']=df_fixed_table_clean['Plays'].apply(lambda x:x.split('-Handed')[0])\n",
+        "df_fixed_table_clean['BackHand']=df_fixed_table_clean['Plays'].apply(lambda x:x.split(',')[1].split('Backhand')[0])\n",
+        "df_fixed_table_clean['Height (CM)']=df_fixed_table_clean['height'].apply(lambda x:extract_height(x))\n",
         "df_fixed_table_clean['Birthdate']=df_fixed_table_clean['Birthdate'].apply(lambda x:extract_birthdate(x))\n",
         "\n",
         "df_fixed_table_clean=df_fixed_table_clean.drop(['Plays','height'],axis=1)"
@@ -489,8 +491,40 @@
       "metadata": {
         "id": "jpnwPbS5Z4NB"
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_fixed_table_clean['Plays'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W6H7gbW_l_nc",
+        "outputId": "5bf76641-8380-4635-f299-bdc9b4bc0847"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Right-Handed,UnknownBackhand       546\n",
+              "Right-Handed,Two-HandedBackhand    504\n",
+              "Right-Handed,One-HandedBackhand    141\n",
+              "Left-Handed,UnknownBackhand         95\n",
+              "Left-Handed,Two-HandedBackhand      85\n",
+              "Left-Handed,One-HandedBackhand      21\n",
+              "Name: Plays, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
