--- a/merge_tables.ipynb
+++ b/merge_tables.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNGL9lZV/hyQpHs1tA1riu7",
+      "authorship_tag": "ABX9TyPXOjBP8T8yoDbaD/fKMSl6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,8 @@
         "install_package(\"requests\")\n",
         "install_package(\"PyGitHub\")\n",
         "install_package(\"pandas\")\n",
-        "install_package(\"tqdm\")"
+        "install_package(\"tqdm\")\n",
+        "install_package(\"mumpy\")"
       ],
       "metadata": {
         "colab": {
@@ -310,6 +311,53 @@
         "id": "WMbDqtBVbzVA"
       },
       "execution_count": 189,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Create the binary_transformation with train,validation & test separation"
+      ],
+      "metadata": {
+        "id": "7Cx8ibdbmqgA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "np.random.seed(seed=42)\n",
+        "\n",
+        "\n",
+        "df=df_ranking_odds_fixed_tournament.copy()[['tournament_date','unique_game_id']]\n",
+        "df['winner'] = np.random.randint(2, size=len(df))\n",
+        "\n",
+        "# Convert 'tournament_date' to datetime if it's not already in datetime format\n",
+        "df['tournament_date'] = pd.to_datetime(df['tournament_date'])\n",
+        "\n",
+        "# Split the dataset based on date ranges\n",
+        "train = df[df['tournament_date'].dt.year <= 2017].drop('tournament_date',axis=1)\n",
+        "validation = df[(df['tournament_date'].dt.year >= 2018) & (df['tournament_date'].dt.year <= 2020)].drop('tournament_date',axis=1)\n",
+        "test = df[(df['tournament_date'].dt.year >= 2021) & (df['tournament_date'].dt.year <= 2023)].drop('tournament_date',axis=1)\n"
+      ],
+      "metadata": {
+        "id": "zbFOKYyXmyVd"
+      },
+      "execution_count": 205,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add_file_github('data/ml_datasets/train_label.csv',train.to_csv(index=False))\n",
+        "add_file_github('data/ml_datasets/validation_label.csv',validation.to_csv(index=False))\n",
+        "add_file_github('data/ml_datasets/test_label.csv',test.to_csv(index=False))"
+      ],
+      "metadata": {
+        "id": "NioKgMQmpaa7"
+      },
+      "execution_count": 206,
       "outputs": []
     }
   ]
