--- a/functions/functions_fixed_table.ipynb
+++ b/functions/functions_fixed_table.ipynb
@@ -359,7 +359,7 @@
     {
       "cell_type": "code",
       "source": [
-        "def find_matchs(tournament_row):\n",
+        "def find_matchs(tournament_url,tournament_date):\n",
         "  \"\"\"\n",
         "  Takes a row of the df_tournament.csv and returns the different games\n",
         "  \"\"\"\n",
@@ -367,8 +367,8 @@
         "  if \"laver-cup\" in tournament_row[\"url\"] or \"atp-cup\" in tournament_row[\"url\"] or \"perth-sydney\" in tournament_row[\"url\"]:\n",
         "    return []\n",
         "  else:\n",
-        "    tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+tournament_row['tournament_date'].split('.')[0]+'/results'\n",
-        "    tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_row[\"url\"].split('tournaments')[1].split(\"overview\")[0]+'/results'\n",
+        "    tournament_url_archive=\"https://www.atptour.com/en/scores/archive\"+tournament_url.split('tournaments')[1].split(\"overview\")[0]+tournament_date.split('.')[0]+'/results'\n",
+        "    tournament_url_current=\"https://www.atptour.com/en/scores/current\"+tournament_url.split('tournaments')[1].split(\"overview\")[0]+'/results'\n",
         "    scrapping_tournament_archive=html_elements_from_url(tournament_url_archive,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "    scrapping_tournament_current=html_elements_from_url(tournament_url_current,\"div\",['scores-results-content'])[\"scores-results-content\"]\n",
         "\n",
@@ -483,7 +483,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eKWlpyRPemghzmN8X1cYFW6MOJTJpUDm",
-      "authorship_tag": "ABX9TyM+4UwrpnQgKZ+HIicMjHkX",
+      "authorship_tag": "ABX9TyPaHMVLjX04565Gp17Sw44N",
       "include_colab_link": true
     },
     "kernelspec": {
